# aiida-fans-tutorial

./: .gitignore  README.md  aiida_basic.py  pyproject.toml  requirements.txt  setup-code.yml  setup-computer.yml  setup-profile.yaml  setup-profile.yml  tutorial.py
